POWR-620 - migrated new body field to Event, Information and News content types.

--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.event.field_all_day
     - field.field.node.event.field_body
+    - field.field.node.event.field_body_content
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
@@ -18,6 +19,7 @@ dependencies:
     - content_moderation
     - datetime
     - paragraphs
+    - text
     - time_field
 id: node.event.default
 targetEntityType: node
@@ -38,7 +40,7 @@ content:
     type: boolean_checkbox
     region: content
   field_body:
-    weight: 12
+    weight: 13
     settings:
       title: paragraph
       title_plural: paragraphs
@@ -52,8 +54,17 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: '0'
+      closed_mode_threshold: 0
     third_party_settings: {  }
     type: paragraphs
+    region: content
+  field_body_content:
+    weight: 12
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
     region: content
   field_end_date:
     weight: 9
@@ -63,7 +74,9 @@ content:
     region: content
   field_end_time:
     weight: 10
-    settings: {  }
+    settings:
+      enabled: false
+      step: 5
     third_party_settings:
       conditional_fields:
         199340d9-1e64-4676-be98-142450179a38:
@@ -97,7 +110,7 @@ content:
     third_party_settings: {  }
     region: content
   field_legacy_path:
-    weight: 26
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -112,7 +125,9 @@ content:
     region: content
   field_start_time:
     weight: 8
-    settings: {  }
+    settings:
+      enabled: false
+      step: 5
     third_party_settings:
       conditional_fields:
         0e2a458c-ff52-4f8c-bf7a-6ef4359d1868:
@@ -148,7 +163,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 13
+    weight: 14
     settings: {  }
     region: content
     third_party_settings: {  }
