--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.event.field_all_day
     - field.field.node.event.field_body
+    - field.field.node.event.field_body_content
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
@@ -18,6 +19,7 @@ dependencies:
     - ds
     - entity_reference_revisions
     - panelizer
+    - text
     - time_field
     - user
 third_party_settings:
@@ -32,25 +34,18 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        classes: {  }
-        wrappers:
-          content: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
+      settings: {  }
     regions:
       content:
         - content_moderation_control
+        - field_all_day
         - field_summary
         - field_start_date
         - field_start_time
         - field_end_date
         - field_end_time
         - field_event_location
-        - field_body
-        - field_all_day
+        - field_body_content
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -61,17 +56,25 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_body:
-    weight: 7
-    label: hidden
+  field_all_day:
+    type: boolean
+    weight: 1
+    region: content
+    label: above
     settings:
-      view_mode: default
-      link: ''
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
+  field_body_content:
+    weight: 8
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_end_date:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       timezone_override: ''
@@ -80,7 +83,7 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 5
+    weight: 6
     label: hidden
     settings:
       time_format: 'h:i a'
@@ -89,7 +92,7 @@ content:
     region: content
   field_event_location:
     type: entity_reference_revisions_entity_view
-    weight: 6
+    weight: 7
     label: hidden
     settings:
       view_mode: default
@@ -105,7 +108,7 @@ content:
             classes: {  }
     region: content
   field_start_date:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       timezone_override: ''
@@ -114,7 +117,7 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       time_format: 'h:i a'
@@ -122,7 +125,7 @@ content:
     type: time_formatter
     region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -158,6 +161,6 @@ content:
     type: string
     region: content
 hidden:
-  field_all_day: true
+  field_body: true
   field_legacy_path: true
   links: true
