--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -4,13 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_body_content
     - field.field.node.information.field_legacy_path
     - field.field.node.information.field_summary
     - node.type.information
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -24,19 +25,12 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        classes: {  }
-        wrappers:
-          content: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
+      settings: {  }
     regions:
       content:
         - content_moderation_control
         - field_summary
-        - field_body
+        - field_body_content
 id: node.information.default
 targetEntityType: node
 bundle: information
@@ -47,14 +41,12 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_body:
-    type: entity_reference_revisions_entity_view
+  field_body_content:
     weight: 2
     label: hidden
-    settings:
-      view_mode: default
-      link: ''
+    settings: {  }
     third_party_settings: {  }
+    type: text_default
     region: content
   field_summary:
     weight: 1
@@ -93,6 +85,7 @@ content:
     type: string
     region: content
 hidden:
+  field_body: true
   field_legacy_path: true
   links: true
   scheduled_publication: true
