--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -4,14 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_body_content
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -30,7 +31,7 @@ third_party_settings:
       content:
         - content_moderation_control
         - field_summary
-        - field_body
+        - field_body_content
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -41,14 +42,12 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_body:
+  field_body_content:
     weight: 2
     label: hidden
-    settings:
-      view_mode: default
-      link: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
+    type: text_default
     region: content
   field_summary:
     weight: 1
@@ -87,6 +86,7 @@ content:
     type: string
     region: content
 hidden:
+  field_body: true
   field_legacy_path: true
   field_topics: true
   links: true
