POWR-620 disabled Media Entity view so that default display is used, added <p> tag to document embedded display for correct spacing in HTML field.

--- a/web/sites/default/config/views.view.media_entity.yml
+++ b/web/sites/default/config/views.view.media_entity.yml
@@ -1,9 +1,8 @@
 uuid: 18c0cf87-5bdd-49b8-872d-db561e8e5c93
 langcode: en
-status: true
+status: false
 dependencies:
   config:
-    - core.entity_view_mode.media.embedded
     - field.storage.media.field_document
     - field.storage.media.field_media_video_embed_field
     - field.storage.media.field_summary
