--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -22,7 +22,7 @@ content:
   created:
     label: inline
     type: timestamp
-    weight: 3
+    weight: 5
     settings:
       date_format: long
       custom_date_format: ''
@@ -37,13 +37,30 @@ content:
             classes: {  }
     region: content
   field_document:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
     region: content
+  field_file_size:
+    type: number_integer
+    weight: 4
+    region: content
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+  field_mime_type:
+    type: string
+    weight: 2
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_summary:
     weight: 1
     label: hidden
@@ -62,8 +79,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
-  field_file_size: true
   field_media_in_library: true
-  field_mime_type: true
   thumbnail: true
   uid: true
