--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -24,7 +24,7 @@ content:
     type: timestamp
     weight: 5
     settings:
-      date_format: long
+      date_format: short
       custom_date_format: ''
       timezone: ''
     third_party_settings:
@@ -48,7 +48,7 @@ content:
     type: number_integer
     weight: 4
     region: content
-    label: above
+    label: hidden
     settings:
       thousand_separator: ''
       prefix_suffix: true
@@ -77,8 +77,15 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
+  uid:
+    type: entity_reference_label
+    weight: 6
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
-  uid: true
