--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -25,7 +25,7 @@ filters:
     status: true
     weight: -48
     settings:
-      htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n    i: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false\r\n  RemoveEmpty.Predicate:\r\n    iframe:\r\n      - src\r\n    i:\r\n      - class\r\nHTML:\r\n  SafeIframe: true\r\nURI:\r\n  DisableExternalResources: false\r\n  SafeIframeRegexp: '%^(https?:)?(\\/\\/www\\.youtube\\.com\\/embed\\/)%'\r\n"
+      htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n    i: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false\r\n  RemoveEmpty.Predicate:\r\n    iframe:\r\n      - src\r\n    i:\r\n      - class\r\nHTML:\r\n  SafeIframe: true\r\nURI:\r\n  DisableExternalResources: false\r\n  SafeIframeRegexp: '%^(https?:)?(\\/\\/www\\.youtube\\.com\\/embed\\/|player\\.vimeo\\.com/video/)%'\r\n"
   entity_embed:
     id: entity_embed
     provider: entity_embed
