POWR-620 applied patch to allow embed button icons to be configured by path and included in config export, added icons to theme

--- a/web/sites/default/config/embed.button.document_browser.yml
+++ b/web/sites/default/config/embed.button.document_browser.yml
@@ -4,8 +4,6 @@ status: true
 dependencies:
   config:
     - media.type.document
-  content:
-    - 'file:file:4612e61a-698b-42c9-9c58-b544fe941f36'
   module:
     - entity_embed
     - media
@@ -21,4 +19,5 @@ type_settings:
   entity_browser: document_browser_embed
   entity_browser_settings:
     display_review: false
-icon_uuid: 4612e61a-698b-42c9-9c58-b544fe941f36
+icon_uuid: null
+icon_path: /themes/custom/cloudy/images/icons/embed_buttons/paperclip-solid.png
