--- a/web/sites/default/config/embed.button.audio_video_browser.yml
+++ b/web/sites/default/config/embed.button.audio_video_browser.yml
@@ -5,8 +5,6 @@ dependencies:
   config:
     - media.type.audio
     - media.type.video
-  content:
-    - 'file:file:34338bff-85b8-4680-a15a-b5c38e8552ab'
   module:
     - entity_embed
     - media
@@ -23,4 +21,5 @@ type_settings:
   entity_browser: audio_video_browser_embed
   entity_browser_settings:
     display_review: false
-icon_uuid: 34338bff-85b8-4680-a15a-b5c38e8552ab
+icon_uuid: null
+icon_path: /themes/custom/cloudy/images/icons/embed_buttons/play-circle.png
