--- a/web/sites/default/config/embed.button.image_browser.yml
+++ b/web/sites/default/config/embed.button.image_browser.yml
@@ -4,8 +4,6 @@ status: true
 dependencies:
   config:
     - media.type.image
-  content:
-    - 'file:file:344f5598-5ad1-4df2-af0a-7f05abf62a92'
   module:
     - entity_embed
     - image
@@ -22,4 +20,5 @@ type_settings:
   entity_browser: image_browser_embed
   entity_browser_settings:
     display_review: false
-icon_uuid: 344f5598-5ad1-4df2-af0a-7f05abf62a92
+icon_uuid: null
+icon_path: /themes/custom/cloudy/images/icons/embed_buttons/image.png
