POWR-636 - added new display to view "User: Assigned to review" to display all items, configured user entity to display new view beneath existing one.

--- a/web/sites/default/config/core.entity_view_display.user.user.full.yml
+++ b/web/sites/default/config/core.entity_view_display.user.user.full.yml
@@ -20,6 +20,7 @@ third_party_settings:
       content:
         - member_for
         - user_assigned_to_review_entity_view_1
+        - user_assigned_to_review_entity_view_2
         - masquerade
   panelizer:
     enable: false
@@ -94,7 +95,7 @@ bundle: user
 mode: full
 content:
   masquerade:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -105,6 +106,11 @@ content:
     third_party_settings: {  }
   user_assigned_to_review_entity_view_1:
     weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  user_assigned_to_review_entity_view_2:
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
