--- a/web/sites/default/config/views.view.user_assigned_to_review.yml
+++ b/web/sites/default/config/views.view.user_assigned_to_review.yml
@@ -157,6 +157,69 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
+        moderation_state:
+          id: moderation_state
+          table: node_field_revision
+          field: moderation_state
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Status
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: content_moderation_state
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          plugin_id: moderation_state_field
         type:
           id: type
           table: node_field_data
@@ -573,7 +636,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: '<h2>@total items assigned for review</h2>'
+          content: '<h2>@total items assigned to user for review</h2>'
           plugin_id: result
       footer: {  }
       empty: {  }
@@ -655,13 +718,14 @@ display:
   entity_view_1:
     display_plugin: entity_view
     id: entity_view_1
-    display_title: EVA
+    display_title: 'In review EVA'
     position: 1
     display_options:
       display_extenders: {  }
       entity_type: user
       bundles:
         - user
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -672,3 +736,80 @@ display:
         - user.permissions
       tags:
         - 'config:workflow_list'
+  entity_view_2:
+    display_plugin: entity_view
+    id: entity_view_2
+    display_title: 'All items EVA'
+    position: 1
+    display_options:
+      display_extenders: {  }
+      entity_type: user
+      bundles:
+        - user
+      filters:
+        latest_revision:
+          id: latest_revision
+          table: node_revision
+          field: latest_revision
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: ''
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          plugin_id: latest_revision
+      defaults:
+        filters: false
+        filter_groups: false
+        header: false
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      display_description: ''
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: '<h2>@total total items assigned to user</h2>'
+          plugin_id: result
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
