POWR-642 Add "popular" field to service. Show popular services on top.

--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -141,6 +141,18 @@ display:
             operator: ''
           group: 1
       sorts:
+        field_popular_value:
+          id: field_popular_value
+          table: node__field_popular
+          field: field_popular_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
         title:
           id: title
           table: node_field_data
