--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_legacy_path
+    - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_reviewer
     - field.field.node.city_service.field_service_mode
@@ -26,32 +27,39 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   field_audience:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_community_actions:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 26
+    weight: 15
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_popular:
+    weight: 2
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_related_content:
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -60,7 +68,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 27
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -70,7 +78,7 @@ content:
     region: content
   field_service_mode:
     type: paragraphs
-    weight: 6
+    weight: 7
     settings:
       title: 'service mode'
       title_plural: 'service modes'
@@ -101,7 +109,7 @@ content:
     type: string_textarea
     region: content
   field_time_to_complete:
-    weight: 2
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -109,20 +117,20 @@ content:
     type: string_textfield
     region: content
   field_topics:
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 11
+    weight: 12
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -136,7 +144,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 12
+    weight: 13
     region: content
     third_party_settings: {  }
   title:
@@ -152,7 +160,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -160,7 +168,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
