--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_legacy_path
+    - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_reviewer
     - field.field.node.city_service.field_service_mode
@@ -47,6 +48,16 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_popular:
+    weight: 4
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
     weight: 3
