--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -16,6 +16,7 @@ permissions:
   - 'access taxonomy overview'
   - 'administer nodes'
   - 'create alert content'
+  - 'create field_popular'
   - 'edit any alert content'
   - 'edit any audio_file media'
   - 'edit any building content'
@@ -29,6 +30,8 @@ permissions:
   - 'edit any notification content'
   - 'edit any service_location content'
   - 'edit any video media'
+  - 'edit field_popular'
+  - 'edit own field_popular'
   - 'edit terms in audience'
   - 'edit terms in community_actions'
   - 'edit terms in topics'
@@ -56,8 +59,10 @@ permissions:
   - 'view building revisions'
   - 'view city_service revisions'
   - 'view event revisions'
+  - 'view field_popular'
   - 'view guide revisions'
   - 'view information revisions'
   - 'view news revisions'
   - 'view notification revisions'
+  - 'view own field_popular'
   - 'view service_location revisions'
