--- a/web/sites/default/config/core.entity_form_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
-    - content_moderation
     - maxlength
     - text
     - video_embed_field
@@ -31,12 +30,6 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 4
-    settings: {  }
-    region: content
-    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -53,9 +46,16 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    weight: 4
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
 hidden:
   created: true
   field_media_in_library: true
+  moderation_state: true
   path: true
-  status: true
   uid: true
