--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.media.document.field_summary
     - media.type.document
   module:
-    - content_moderation
     - file
 _core:
   default_config_hash: xFJUl0MccoGPEv1eb_I_XnxzjqvZ8M5HA1G3PBtv9IE
@@ -37,12 +36,6 @@ content:
         maxlength_js_truncate_html: true
     type: string_textarea
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 3
-    settings: {  }
-    region: content
-    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -51,9 +44,16 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  status:
+    type: boolean_checkbox
+    weight: 3
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
 hidden:
   created: true
   field_media_in_library: true
+  moderation_state: true
   path: true
-  status: true
   uid: true
