POWR-602 - disabled Media Entity view; added file_size and mime_type fields to document media type and mapped them, added media--document--full template so that file size and mimetype/icon can be displayed, modified default media displays to be consistent, modified Media Library media displays to only include thumbnail and name, added Media workflow and enabled for media types, enabled Moderation Control form field in media types

--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.media.video.field_transcript
     - media.type.video
   module:
+    - content_moderation
     - maxlength
     - text
     - video_embed_field
@@ -32,6 +33,12 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -58,6 +65,5 @@ content:
 hidden:
   created: true
   field_media_in_library: true
-  moderation_state: true
   path: true
   uid: true
