--- a/web/sites/default/config/core.entity_view_display.media.audio.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.media_library.yml
@@ -1,31 +1,20 @@
-uuid: ad832d59-2879-4abc-a0cb-e6a3e3a4ba4a
+uuid: 7d1201da-38ef-40c9-a9c9-3b42c0a0883f
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.media_library
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
-    - text
-    - user
     - video_embed_field
-id: media.audio.default
+id: media.audio.media_library
 targetEntityType: media
 bundle: audio
-mode: default
+mode: media_library
 content:
-  created:
-    label: inline
-    type: timestamp
-    weight: 3
-    region: content
-    settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
-    third_party_settings: {  }
   field_media_video_embed_field:
     weight: 1
     label: hidden
@@ -37,13 +26,6 @@ content:
     third_party_settings: {  }
     type: video_embed_field_video
     region: content
-  field_transcript:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   name:
     type: string
     weight: 0
@@ -52,14 +34,10 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  uid:
-    label: inline
-    type: author
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  created: true
   field_media_in_library: true
+  field_transcript: true
   thumbnail: true
+  uid: true
