--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.media.document.field_document
+    - field.field.media.document.field_file_size
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
   module:
@@ -17,6 +19,11 @@ targetEntityType: media
 bundle: document
 mode: default
 content:
+  content_moderation_control:
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   created:
     label: inline
     type: timestamp
@@ -38,10 +45,34 @@ content:
     weight: 2
     label: hidden
     settings:
-      use_description_as_link_text: true
-    third_party_settings: {  }
+      use_description_as_link_text: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: file_default
     region: content
+  field_file_size:
+    type: number_integer
+    weight: 5
+    region: content
+    label: hidden
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+  field_mime_type:
+    type: string
+    weight: 6
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_summary:
     weight: 1
     label: hidden
@@ -58,8 +89,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
+  uid:
+    type: entity_reference_label
+    weight: 4
+    region: content
+    label: inline
+    settings:
+      link: true
+    third_party_settings: {  }
 hidden:
-  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
-  uid: true
