--- a/web/sites/default/config/views.view.media_entity.yml
+++ b/web/sites/default/config/views.view.media_entity.yml
@@ -1,6 +1,6 @@
 uuid: 18c0cf87-5bdd-49b8-872d-db561e8e5c93
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - field.storage.media.field_document
