--- a/web/sites/default/config/core.entity_form_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
+    - content_moderation
     - maxlength
     - text
     - video_embed_field
@@ -30,6 +31,12 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -56,6 +63,5 @@ content:
 hidden:
   created: true
   field_media_in_library: true
-  moderation_state: true
   path: true
   uid: true
