--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -4,10 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.media.document.field_document
+    - field.field.media.document.field_file_size
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
   module:
+    - content_moderation
     - file
 _core:
   default_config_hash: xFJUl0MccoGPEv1eb_I_XnxzjqvZ8M5HA1G3PBtv9IE
@@ -36,6 +39,12 @@ content:
         maxlength_js_truncate_html: true
     type: string_textarea
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -53,7 +62,8 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_file_size: true
   field_media_in_library: true
-  moderation_state: true
+  field_mime_type: true
   path: true
   uid: true
