--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - image.style.thumbnail
     - media.type.image
   module:
+    - content_moderation
     - image
 _core:
   default_config_hash: kyoAHlZTGIuGTaQuBblGBk8EhfnVKOl19_0j5WbpQqM
@@ -24,6 +25,12 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -42,6 +49,5 @@ content:
 hidden:
   created: true
   field_media_in_library: true
-  moderation_state: true
   path: true
   uid: true
