--- a/web/sites/default/config/core.entity_view_display.media.document.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.media_library.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - core.entity_view_mode.media.media_library
     - field.field.media.document.field_document
+    - field.field.media.document.field_file_size
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - image.style.thumbnail
     - media.type.document
@@ -18,14 +20,17 @@ targetEntityType: media
 bundle: document
 mode: media_library
 content:
-  content_moderation_control:
-    weight: -20
-    settings: {  }
-    third_party_settings: {  }
+  name:
+    type: string
+    weight: 0
     region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   thumbnail:
     type: image
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       image_style: thumbnail
@@ -33,9 +38,11 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  content_moderation_control: true
   created: true
   field_document: true
+  field_file_size: true
   field_media_in_library: true
+  field_mime_type: true
   field_summary: true
-  name: true
   uid: true
