--- a/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
@@ -1,8 +1,9 @@
-uuid: b11015db-770f-423d-9777-eb5702b69043
+uuid: fa02e58d-32ee-48e5-b8b3-0e1a6a1bf894
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.media_library
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
     - media.type.image
@@ -11,21 +12,11 @@ dependencies:
     - responsive_image
 _core:
   default_config_hash: VLDxfMVPTkd2xvOjFMCh3kWmaOYnd03zggFXuUXQVEY
-id: media.image.default
+id: media.image.media_library
 targetEntityType: media
 bundle: image
-mode: default
+mode: media_library
 content:
-  created:
-    type: timestamp
-    weight: 2
-    region: content
-    label: inline
-    settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
-    third_party_settings: {  }
   image:
     type: responsive_image
     weight: 1
@@ -43,15 +34,9 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  uid:
-    type: entity_reference_label
-    weight: 3
-    region: content
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  created: true
   field_media_in_library: true
   thumbnail: true
+  uid: true
