POWR-602 - adjusted permissions to allow content moderation on media for Marty Member

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -38,6 +38,9 @@ permissions:
   - 'use editorial transition publish'
   - 'use editorial transition review'
   - 'use editorial transition send_to_review'
+  - 'use media transition archive'
+  - 'use media transition publish'
+  - 'use media transition restore'
   - 'use text format simple_editor'
   - 'view all media revisions'
   - 'view all revisions'
