POWR-642 Add Popular to services index.

--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_audience
     - field.storage.node.field_community_actions
+    - field.storage.node.field_popular
     - field.storage.node.field_topics
     - search_api.server.database
     - core.entity_view_mode.node.search_result
@@ -18,6 +19,14 @@ name: Services
 description: 'Index of the service content type.'
 read_only: false
 field_settings:
+  field_popular:
+    label: Popular
+    datasource_id: 'entity:node'
+    property_path: field_popular
+    type: boolean
+    dependencies:
+      config:
+        - field.storage.node.field_popular
   name_actions:
     label: 'Community actions » Taxonomy term » Name'
     datasource_id: 'entity:node'
