--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -233,6 +233,18 @@ display:
             group_items: {  }
           plugin_id: search_api_boolean
       sorts:
+        field_popular:
+          id: field_popular
+          table: search_api_index_services
+          field: field_popular
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
         title:
           id: title
           table: search_api_index_services
