POWR-602 - updated bulk update for group media

--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -228,8 +228,8 @@ display:
           action_title: Action
           include_exclude: include
           selected_actions:
-            - media_publish_action
-            - media_unpublish_action
+            - publish
+            - unpublish_archive
           entity_type: media
           plugin_id: bulk_form
         thumbnail__target_id:
