POWR-643 Update service teaser style

--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -75,7 +75,7 @@ display:
         options:
           view_modes:
             'entity:node':
-              city_service: sitewide_teaser
+              city_service: teaser
       fields:
         title:
           id: title
