POWR-627 Give sitewide editors access to admin toolbar

--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -14,6 +14,7 @@ is_admin: null
 permissions:
   - 'access content overview'
   - 'access taxonomy overview'
+  - 'access toolbar'
   - 'administer nodes'
   - 'create alert content'
   - 'edit any alert content'
