POWR-643 Update teaser style for content types

--- a/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.group.program.field_email
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
@@ -17,52 +18,6 @@ dependencies:
     - group.type.program
   module:
     - ds
-third_party_settings:
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - 'bundle_field:group'
-        - label
-        - field_summary
-    fields:
-      'bundle_field:group':
-        plugin_id: 'bundle_field:group'
-        weight: 0
-        label: hidden
-        formatter: default
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: ''
-            fi-cl: 'text-muted text-uppercase'
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
 id: group.program.search_result
 targetEntityType: group
 bundle: program
