--- a/web/sites/default/config/core.entity_view_display.node.guide.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.search_result.yml
@@ -7,11 +7,11 @@ dependencies:
     - field.field.node.guide.field_body
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
+    - field.field.node.guide.field_reviewer
     - field.field.node.guide.field_summary
     - field.field.node.guide.field_topics
     - node.type.guide
   module:
-    - ds
     - panelizer
     - user
 third_party_settings:
@@ -20,66 +20,6 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - 'bundle_field:node'
-        - node_title
-        - field_summary
-    fields:
-      'bundle_field:node':
-        plugin_id: 'bundle_field:node'
-        weight: 0
-        label: hidden
-        formatter: default
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: ''
-            fi-cl: 'text-muted text-uppercase'
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-      node_title:
-        plugin_id: node_title
-        weight: 1
-        label: hidden
-        formatter: default
-        settings:
-          link: true
-          wrapper: h3
-          class: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
 id: node.guide.search_result
 targetEntityType: node
 bundle: guide
@@ -126,5 +66,6 @@ hidden:
   field_body: true
   field_legacy_path: true
   field_related_content: true
+  field_reviewer: true
   field_topics: true
   links: true
