POWR-664 - allow users to select page size in group media and sitewide media views.

--- a/web/sites/default/config/views.view.media_library.yml
+++ b/web/sites/default/config/views.view.media_library.yml
@@ -60,17 +60,17 @@ display:
           offset: 0
           id: 0
           total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
           tags:
             previous: ‹‹
             next: ››
+          expose:
+            items_per_page: true
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: true
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
       style:
         type: default
         options:
@@ -392,20 +392,23 @@ display:
         - 'url.query_args:sort_by'
         - user.permissions
       tags:
-        - 'config:core.entity_view_display.media.document.default'
-        - 'config:core.entity_view_display.media.document.media_library'
-        - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.audio.default'
         - 'config:core.entity_view_display.media.audio.embedded'
+        - 'config:core.entity_view_display.media.audio.media_library'
         - 'config:core.entity_view_display.media.audio.thumbnail'
         - 'config:core.entity_view_display.media.document.embedded'
         - 'config:core.entity_view_display.media.document.teaser'
         - 'config:core.entity_view_display.media.document.thumbnail'
+        - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.image.embedded'
+        - 'config:core.entity_view_display.media.image.media_library'
         - 'config:core.entity_view_display.media.image.thumbnail'
         - 'config:core.entity_view_display.media.video.default'
         - 'config:core.entity_view_display.media.video.embedded'
+        - 'config:core.entity_view_display.media.video.media_library'
         - 'config:core.entity_view_display.media.video.thumbnail'
+        - 'config:core.entity_view_display.media.document.default'
+        - 'config:core.entity_view_display.media.document.media_library'
   page:
     display_plugin: page
     id: page
@@ -434,6 +437,7 @@ display:
       tags:
         - 'config:core.entity_view_display.media.audio.default'
         - 'config:core.entity_view_display.media.audio.embedded'
+        - 'config:core.entity_view_display.media.audio.media_library'
         - 'config:core.entity_view_display.media.audio.thumbnail'
         - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.embedded'
@@ -442,9 +446,11 @@ display:
         - 'config:core.entity_view_display.media.document.thumbnail'
         - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.image.embedded'
+        - 'config:core.entity_view_display.media.image.media_library'
         - 'config:core.entity_view_display.media.image.thumbnail'
         - 'config:core.entity_view_display.media.video.default'
         - 'config:core.entity_view_display.media.video.embedded'
+        - 'config:core.entity_view_display.media.video.media_library'
         - 'config:core.entity_view_display.media.video.thumbnail'
   widget:
     display_plugin: page
@@ -575,6 +581,7 @@ display:
       tags:
         - 'config:core.entity_view_display.media.audio.default'
         - 'config:core.entity_view_display.media.audio.embedded'
+        - 'config:core.entity_view_display.media.audio.media_library'
         - 'config:core.entity_view_display.media.audio.thumbnail'
         - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.embedded'
@@ -583,7 +590,9 @@ display:
         - 'config:core.entity_view_display.media.document.thumbnail'
         - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.image.embedded'
+        - 'config:core.entity_view_display.media.image.media_library'
         - 'config:core.entity_view_display.media.image.thumbnail'
         - 'config:core.entity_view_display.media.video.default'
         - 'config:core.entity_view_display.media.video.embedded'
+        - 'config:core.entity_view_display.media.video.media_library'
         - 'config:core.entity_view_display.media.video.thumbnail'
