POWR-677 add content lock and configure.

--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -16,6 +16,7 @@ permissions:
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'administer nodes'
+  - 'break content lock'
   - 'create alert content'
   - 'create field_popular'
   - 'edit any alert content'
