--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "drupal/conditional_fields": "^1.0@alpha",
         "drupal/config_split": "^1.4",
         "drupal/console": "^1.0.2",
+        "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "~8.5",
         "drupal/custom_add_another": "^1.0@beta",
