--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -25,6 +25,7 @@ module:
   consumers: 0
   contact: 0
   contact_storage: 0
+  content_lock: 0
   content_moderation: 0
   contextual: 0
   copyright_block: 0
