POWR-627-1 add menu items for user views, profile, and logout

--- a/web/sites/default/config/views.view.my_content.yml
+++ b/web/sites/default/config/views.view.my_content.yml
@@ -9,6 +9,7 @@ dependencies:
     - node.type.information
     - node.type.news
     - node.type.notification
+    - system.menu.editor-toolbar
     - user.role.authenticated
   module:
     - content_moderation
@@ -1100,6 +1101,15 @@ display:
     display_options:
       display_extenders: {  }
       path: my-content
+      menu:
+        type: normal
+        title: 'My content'
+        description: ''
+        expanded: false
+        parent: ''
+        weight: 0
+        context: '0'
+        menu_name: editor-toolbar
     cache_metadata:
       max-age: -1
       contexts:
