--- a/web/sites/default/config/views.view.my_groups.yml
+++ b/web/sites/default/config/views.view.my_groups.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.group_content.group_roles
+    - system.menu.editor-toolbar
   module:
     - group
     - user
@@ -323,6 +324,15 @@ display:
     display_options:
       display_extenders: {  }
       path: my-groups
+      menu:
+        type: normal
+        title: 'My groups'
+        description: ''
+        expanded: false
+        parent: ''
+        weight: 20
+        context: '0'
+        menu_name: editor-toolbar
     cache_metadata:
       max-age: -1
       contexts:
