--- a/web/sites/default/config/views.view.my_media.yml
+++ b/web/sites/default/config/views.view.my_media.yml
@@ -6,6 +6,7 @@ dependencies:
     - media.type.document
     - media.type.image
     - media.type.video
+    - system.menu.editor-toolbar
     - user.role.authenticated
   module:
     - group
@@ -912,6 +913,15 @@ display:
     display_options:
       display_extenders: {  }
       path: my-media
+      menu:
+        type: normal
+        title: 'My media'
+        description: ''
+        expanded: false
+        parent: ''
+        weight: 10
+        context: '0'
+        menu_name: editor-toolbar
     cache_metadata:
       max-age: -1
       contexts:
