POWR-664 created twig extensions to convert bytes to readable file size string, and mime type to FontAwesome icon; implemented in 2 templates that display documents.

--- a/web/modules/custom/portland/portland.services.yml
+++ b/web/modules/custom/portland/portland.services.yml
@@ -8,3 +8,14 @@ services:
   portland.secrets_reader:
     class: Drupal\portland\SecretsReader
     arguments: ['@logger.factory']
+
+  portland.fileSizeExtension:
+    class: Drupal\portland\TwigExtension\fileSizeExtension
+    tags:
+      - { name: twig.extension }
+
+  portland.fileIconExtension:
+    class: Drupal\portland\TwigExtension\fileIconExtension
+    tags:
+      - { name: twig.extension }
+      
