POWR-643 Update list and taxonomy page display modes

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
+    - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
@@ -18,18 +19,6 @@ dependencies:
     - group.type.bureau_office
   module:
     - ds
-third_party_settings:
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - label
-        - field_summary
 id: group.bureau_office.teaser
 targetEntityType: group
 bundle: bureau_office
