--- a/web/sites/default/config/views.view.groups_by_topic.yml
+++ b/web/sites/default/config/views.view.groups_by_topic.yml
@@ -770,9 +770,9 @@ display:
       style:
         type: default
         options:
-          grouping: {  }
-          row_class: 'list-group-item mb-3'
+          row_class: ''
           default_row_class: false
+          uses_fields: false
       row:
         type: 'entity:group'
         options:
@@ -974,9 +974,9 @@ display:
       style:
         type: default
         options:
-          grouping: {  }
-          row_class: 'list-group-item mb-3'
+          row_class: ''
           default_row_class: false
+          uses_fields: false
       row:
         type: 'entity:group'
         options:
