--- a/web/sites/default/config/core.entity_view_display.node.guide.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.teaser.yml
@@ -7,11 +7,11 @@ dependencies:
     - field.field.node.guide.field_body
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
+    - field.field.node.guide.field_reviewer
     - field.field.node.guide.field_summary
     - field.field.node.guide.field_topics
     - node.type.guide
   module:
-    - ds
     - panelizer
     - user
 third_party_settings:
@@ -20,33 +20,6 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - node_title
-        - field_summary
-    fields:
-      node_title:
-        plugin_id: node_title
-        weight: 0
-        label: hidden
-        formatter: default
-        settings:
-          link: true
-          wrapper: h2
-          class: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
 id: node.guide.teaser
 targetEntityType: node
 bundle: guide
@@ -65,5 +38,6 @@ hidden:
   field_body: true
   field_legacy_path: true
   field_related_content: true
+  field_reviewer: true
   field_topics: true
   links: true
