--- a/web/sites/default/config/views.view.bureaus_and_offices.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices.yml
@@ -69,14 +69,11 @@ display:
             offset_label: Offset
           quantity: 9
       style:
-        type: html_list
+        type: default
         options:
-          row_class: 'list-group-item list-group-item-action mb-3'
+          row_class: ''
           default_row_class: false
           uses_fields: false
-          type: ul
-          wrapper_class: ''
-          class: 'list-group col-12 no-gutters'
       row:
         type: search_api
         options:
