POWR-664 changing case of custom twig extensions to see if that resolves the Twig_ExtensionInterface error; typically caused by a naming conflict.

--- a/web/modules/custom/portland/portland.services.yml
+++ b/web/modules/custom/portland/portland.services.yml
@@ -9,13 +9,13 @@ services:
     class: Drupal\portland\SecretsReader
     arguments: ['@logger.factory']
 
-  portland.fileSizeExtension:
-    class: Drupal\portland\fileSizeExtension
+  portland.FileSizeExtension:
+    class: Drupal\portland\FileSizeExtension
     tags:
       - { name: twig.extension }
 
-  portland.fileIconExtension:
-    class: Drupal\portland\fileIconExtension
+  portland.FileIconExtension:
+    class: Drupal\portland\FileIconExtension
     tags:
       - { name: twig.extension }
       
