POWR-664 change display to Embedded for paragraph form display (prevents moderation control from appearing on media entities when editing paragraphs pages)

--- a/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.paragraph.video.field_video_alignment
     - paragraphs.paragraphs_type.video
   module:
-    - content_moderation
     - entity_browser
     - maxlength
 id: paragraph.video.default
@@ -40,8 +39,9 @@ content:
       open: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: thumbnail
+        view_mode: embedded
       field_widget_edit: false
+      field_widget_replace: false
     region: content
     third_party_settings: {  }
   field_video_alignment:
