--- a/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
@@ -39,8 +39,9 @@ content:
       open: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: default
+        view_mode: embedded
       field_widget_edit: false
+      field_widget_replace: false
     region: content
     third_party_settings: {  }
   field_image_alignment:
