POWR-664 - added moderation control to Audio embedded display

--- a/web/sites/default/config/core.entity_view_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.default.yml
@@ -15,10 +15,15 @@ targetEntityType: media
 bundle: audio
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   created:
     label: inline
     type: timestamp
-    weight: 3
+    weight: 4
     region: content
     settings:
       date_format: medium
@@ -26,7 +31,7 @@ content:
       timezone: ''
     third_party_settings: {  }
   field_media_video_embed_field:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       responsive: true
@@ -37,7 +42,7 @@ content:
     type: video_embed_field_video
     region: content
   field_transcript:
-    weight: 2
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -45,14 +50,13 @@ content:
     region: content
   name:
     type: string
-    weight: 0
+    weight: 1
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
-  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
   uid: true
