POWR-667 - initial commit of prototype work to use entity_embed align and caption filters for media embed buttons

--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -4,13 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_body_content
     - field.field.node.information.field_legacy_path
     - field.field.node.information.field_summary
     - node.type.information
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
+    - paragraphs
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -24,18 +26,12 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        classes: {  }
-        wrappers:
-          content: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
+      settings: {  }
     regions:
       content:
         - content_moderation_control
         - field_summary
+        - field_body_content
         - field_body
 id: node.information.default
 targetEntityType: node
@@ -48,13 +44,18 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_body:
-    type: entity_reference_revisions_entity_view
+    type: paragraph_summary
+    weight: 3
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_body_content:
     weight: 2
     label: hidden
-    settings:
-      view_mode: default
-      link: ''
+    settings: {  }
     third_party_settings: {  }
+    type: text_default
     region: content
   field_summary:
     weight: 1
