--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -118,6 +118,7 @@ module:
   pantheon_advanced_page_cache: 0
   path: 0
   portland: 0
+  portland_entity_embed: 0
   portland_legacy_redirects: 0
   portland_revision_helper: 0
   quickedit: 0
