--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -172,3 +172,4 @@ views_data_export: 1.0.0-beta1
 switch_page_theme: 1.0.0
 groupmedia: 2.0.0-alpha2
 field_defaults: 1.0.0-rc2
+portland_entity_embed: 0.1.0
