POWR-661 Help editor identify revision state.

--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -34,7 +34,6 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - content_moderation_control
         - field_summary
         - field_time_to_complete
         - field_service_mode
@@ -43,24 +42,9 @@ targetEntityType: node
 bundle: city_service
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_popular:
-    weight: 4
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       view_mode: default
@@ -68,7 +52,7 @@ content:
     third_party_settings: {  }
     region: content
   field_summary:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -104,7 +88,7 @@ content:
     type: string
     region: content
   field_time_to_complete:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -112,9 +96,11 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   field_audience: true
   field_community_actions: true
   field_legacy_path: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
   field_topics: true
