POWR-496 created structured 404 page

--- a/web/sites/default/config/core.entity_view_display.block_content.basic.default.yml
+++ b/web/sites/default/config/core.entity_view_display.block_content.basic.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - block_content.type.basic
     - field.field.block_content.basic.body
+    - field.field.block_content.basic.field_title
   module:
     - text
 _core:
@@ -22,4 +23,5 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_title: true
   scheduled_publication: true
