--- a/web/sites/default/config/core.entity_form_display.block_content.basic.default.yml
+++ b/web/sites/default/config/core.entity_form_display.block_content.basic.default.yml
@@ -5,9 +5,8 @@ dependencies:
   config:
     - block_content.type.basic
     - field.field.block_content.basic.body
+    - field.field.block_content.basic.field_title
   module:
-    - content_moderation
-    - datetime
     - text
 _core:
   default_config_hash: S0f54eS7by2OoFl_NrvBK9UGTPx51cktxKhvwMy0Jls
@@ -18,31 +17,27 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 0
+    weight: 1
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
     third_party_settings: {  }
     region: content
-  info:
-    type: string_textfield
-    weight: -5
+  field_title:
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
-    third_party_settings: {  }
   scheduled_publication:
     type: datetime_default
     weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  info: true
+  moderation_state: true
